# vec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.nvim/: tasks.json
include/: any_vec.h  restrict.h  result.h  vec.h  vec_decl.h  vec_impl.h  vec_templ.h
src/: any_vec.c  vec.c
test/: CMakeLists.txt  main.c
test/src/: main.c
